--- a/css/site.css
+++ b/css/site.css
@@ -9,8 +9,12 @@ html {
 body {
     max-width: 1440px;
     margin: auto;
+    background-color: rgba(0, 0, 0, 0.034);
 }
 
+main {
+    background-color: #fff;
+}
 
 h1 {
     font-weight: 700;
@@ -25,6 +29,22 @@ h2 {
     color: #000;
     font-size: 2.5rem;
     text-transform: uppercase;
+}
+
+nav ul {
+    margin: 0;
+}
+
+nav ul li {
+    list-style: none;
+    display: inline-block;
+    color: #fff;
+    padding-right: 1rem;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
 }
 
 p {
@@ -59,7 +79,7 @@ header {
     font-size: 0.67rem;
     text-align: right;
     padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    padding-bottom: 0.5rem;    
 }
 
 footer {
@@ -111,7 +131,7 @@ footer {
 
 #portfolio-section > div > a {
     color: #d8b33c;
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin: 0;
 }
 
@@ -124,5 +144,39 @@ footer {
     margin: 1rem 0;
 }
 
-#my-story > p {
+#portfolio-main {
+    margin-top: 0.05rem;
+    margin-bottom: 0.05rem;
+}
+
+.highlight {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    background-color: #000;
+
+}
+.highlight h2 {
+    color: #fff;
+}
+
+.highlight a{
+    color: #d8b33c;
+    font-size: 1.5rem;
+}
+
+.highlight.invert {
+    background-color: #000;
+    flex-direction: row-reverse;
+}
+
+.invert > div > h2{
+    color: #fff;
+}
+/* .invert > div > a {
+    color: #d8b33c;
+    font-size: 1.5rem;
+} */
+.highlight > img {
+    max-width: 50%;
 }
