--- a/css/site.css
+++ b/css/site.css
@@ -173,10 +173,42 @@ footer {
 .invert > div > h2{
     color: #fff;
 }
-/* .invert > div > a {
-    color: #d8b33c;
-    font-size: 1.5rem;
-} */
+
 .highlight > img {
     max-width: 50%;
+}
+
+#work-item-header {
+    /* padding-left: 2rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem; */
+    margin: 0;
+    text-align: center;
+}
+
+#work-item-image {
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+.work-item-text {
+    padding-left: 15%;
+    padding-right: 15%;
+}
+
+#project-text {
+    left: 1rem;
+}
+
+.work-item-text h3 {
+    margin-bottom: 0.5rem;
+}
+
+.work-item-text p,
+.work-item-text ul {
+    margin-top: 0;
+}
+
+#challenges-text {
+    padding-bottom: 1rem;
 }
